No-Show Tracking, Search Fix, and UI Enhancements